src/app/globals.css
:root {
  background-color: black;

  --bs-info-rgb: 7, 129, 154;

  .flip-card {
    --background-color-primary: rgb(42, 2, 105);

    &.upside-down {
      --background-color-primary: #1c1c1c;
    }
  }

  .flip-card-front,
  .offcanvas-front {
    --text-color-primary: #faece5;
    --text-color-secondary: #b0aca2;
    --text-color-transparent: rgba(114, 111, 86, 0.814);
    --background-color-primary: rgb(42, 2, 105);

    --component-background-color-primary: #faece5;
    --component-background-color-secondary: #e5e0d2;
    --component-background-color-highlight: #f6c928;
    --component-background-color-active: #f1e1a8;
    --component-text-color-primary: #000000;
    --component-text-color-secondary: #84827a;

    --green-indicator-color: green;
    --red-indicator-color: red;

    --medal-background-color: #facf8b;
    --score-label-font-weight-override: bold;

    --bs-body-color: var(--component-text-color-primary);
    --bs-body-bg: var(--background-color-primary);
    --bs-link-color: var(--text-color-primary);
    --bs-tertiary-bg-rgb: var(--background-color-primary);
    --bs-table-border-color: var(--text-color-primary);

    .btn-close {
      --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
    }
  }

  .flip-card-back,
  .offcanvas-back {
    --text-color-primary: #dddddd;
    --text-color-secondary: #7f7f7f;
    --text-color-transparent: rgba(83, 83, 83, 0.814);
    --background-color-primary: #1c1c1c;

    --component-background-color-primary: #3d3d3e;
    --component-background-color-secondary: #505050;
    --component-background-color-highlight: #bebebe;
    --component-background-color-active: #606060;
    --component-text-color-primary: #dddddd;
    --component-text-color-secondary: #aaaaaa;

    --green-indicator-color: rgb(0, 200, 5);
    --red-indicator-color: rgb(255, 54, 36);

    --medal-background-color: var(--text-color-secondary);
    --score-label-color-override: var(--component-text-color-secondary);

    --upside-down-image-filter: grayscale(1) saturate(200%);
    --upside-down-image-transform: scaleY(-1);

    --bs-body-color: var(--component-text-color-primary);
    --bs-body-bg: var(--background-color-primary);
    --bs-link-color: var(--text-color-primary);
    --bs-tertiary-bg-rgb: var(--background-color-primary);
    --bs-table-border-color: var(--text-color-primary);

    .btn-close {
      --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
    }
  }

  .jump-shake {
    animation: jump-shaking 6s infinite;
  }

  .offcanvas {
    --bs-offcanvas-bg: var(--component-background-color-primary);

    .offcanvas-header {
      border-bottom: 1px solid var(--component-text-color-primary);
    }

    .btn-close {
      --bs-btn-close-opacity: 1;
    }

    h2 {
      font-size: 12pt;
      background-color: var(--component-background-color-secondary);
      border-top: 1px solid var(--component-text-color-secondary);
      border-bottom: 1px solid var(--component-text-color-secondary);
      color: var(--component-text-color-secondary);
      text-transform: uppercase;
      margin: 15px 0px;
      padding: 5px;
    }

    hr {
      margin: 10px 0px;
    }
  }

  .accordion.week-selector-accordion {
    --bs-accordion-color: var(--text-color-secondary);
    --bs-accordion-btn-color: var(--text-color-primary);
    --bs-accordion-active-color: var(--text-color-primary);
    --bs-accordion-active-bg: var(--background-color-primary);
    --bs-accordion-btn-focus-box-shadow: none;
    margin-bottom: 20px;

    .accordion-button:not(.collapsed) {
      box-shadow: none;
    }

    --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23faece5' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");

    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23faece5' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");

    .btn-link {
      --bs-link-hover-color: var(--text-color-primary);
      --bs-link-color: var(--component-background-color-primary);
      --bs-btn-color: var(--text-color-secondary);
    }
  }

  .accordion.player-details-accordion {
    --bs-accordion-active-color: var(--component-text-color-primary);
    --bs-accordion-active-bg: var(--component-background-color-primary);
    --bs-accordion-transition-color: var(--component-text-color-primary);
    --bs-accordion-btn-focus-box-shadow: none;
    --bs-accordion-btn-bg: var(--component-background-color-primary);
    --bs-accordion-bg: var(--component-background-color-primary);
    --bs-accordion-border-color: var(--component-text-color-primary);
    --bs-accordion-btn-color: var(--component-text-color-primary);

    .accordion-button {
      font-size: "12px";
      padding: 10px;
      padding-left: 0px;
      padding-right: 0px;
    }

    .accordion-button:not(.collapsed) {
      box-shadow: none;
    }

    .accordion-body {
      padding-left: 0px;
      padding-right: 0px;
      padding-bottom: 0px;
    }
  }

  .navbar-brand {
    padding-left: 8px;
    --bs-navbar-brand-color: var(--text-color-primary);
    --bs-navbar-brand-hover-color: var(--text-color-primary);
  }

  .nav {
    --bs-nav-link-color: var(--text-color-secondary);
    --bs-nav-link-active-color: var(--text-color-primary);
    --bs-nav-link-disabled-color: var(--text-color-transparent);
    --bs-nav-link-hover-color: var(--text-color-primary);
    --bs-border-color: var(--text-color-primary);
  }

  .nav-link {
    --bs-nav-tabs-link-active-color: var(--text-color-primary);
    --bs-nav-tabs-link-color: var(--text-color-secondary);
    --bs-nav-tabs-link-hover-color: var(--text-color-primary);
  }

  .nav-underline {
    --bs-nav-underline-link-active-color: var(--text-color-primary);
  }

  .card {
    --bs-card-spacer-y: 10px;
    --bs-card-bg: var(--component-background-color-primary);
    --bs-card-border-color: var(--component-text-color-secondary);
    margin-bottom: 24px;
  }

  .card-text {
    line-height: 0.75;
  }

  .rules {
    color: var(--text-color-primary);
  }

  .blur-container {
    position: relative;
  }

  .blur {
    position: absolute;
    width: 100%;
    height: 100%;
    filter: blur(8px);
    pointer-events: none;
  }

  .btn-link {
    --bs-link-hover-color: var(--text-color-secondary);
  }

  .table {
    --bs-table-striped-bg: var(--component-background-color-primary);
    --bs-table-accent-bg: var(--component-background-color-secondary);
    --bs-table-color: var(--component-text-color-primary);
    --bs-table-striped-color: var(--component-text-color-primary);
    --bs-table-border-color: var(--component-text-color-primary);
  }

  hr {
    color: var(--component-text-color-secondary);
    opacity: 1;
  }

  div.joined-card-left {
    padding-top: 6px;
  }

  .flip-card {
    perspective: 1000px; /* Remove this if you don't want the 3D effect */
    width: 100%;
    height: 100%;
    position: fixed;
    overflow-y: scroll;
    background-color: var(--background-color-primary);
  }

  .flip-card:not(.upside-down) .flip-card-back {
    overflow-y: hidden;
  }

  .flip-card.upside-down .flip-card-front {
    overflow-y: hidden;
  }

  /* This container is needed to position the front and back side */
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 0.7s;
    transform-style: preserve-3d;
  }

  /* Do an horizontal flip when you move the mouse over the flip box container */
  .flip-card.upside-down .flip-card-inner {
    transform: rotateX(180deg);
  }

  /* Position the front and back side */
  .flip-card-front,
  .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
    background-color: var(--background-color-primary);
  }

  /* Style the back side */
  .flip-card-back {
    transform: rotateX(180deg);
    background-color: var(--background-color-primary);

    --pool-title-transform: scaleY(-1);

    .accordion.player-details-accordion {
      .accordion-button::after {
        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23ddd' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
      }

      .accordion-button.collapsed::after {
        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ddd'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
      }
    }
  }

  .leaderboard-flex-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    align-content: flex-start;
    gap: 15px;
    margin-bottom: 15px;

    &.first-place-group {
      border-radius: 6px;
      padding: 15px;
      background-color: var(--component-background-color-highlight);
      width: fit-content;
      margin-left: auto;
      margin-right: auto;
    }

    .flex-item-card {
      height: 125px;
      width: 350px;
      padding: 10px;
    }
  }

  .flex-item-card {
    background-color: var(--component-background-color-primary);
    border: 1px solid var(--component-text-color-secondary);
    border-radius: 5px;
    color: var(--component-text-color-primary);
  }

  .team-grid-container {
    display: grid;
    grid-template-rows: 25px auto 0px 35px;
    grid-template-columns: 44px auto auto 44px;
    cursor: pointer;
    background-color: var(--component-background-color-primary);

    &.active {
      background-color: var(--component-background-color-active);
    }

    &:hover {
      opacity: 0.9;
    }
  }

  .flex-break {
    flex-basis: 100%;
    height: 0;
  }
}

@keyframes jump-shaking {
  0% {
    transform: translateX(0);
  }
  3% {
    transform: translateY(-9px);
  }
  6% {
    transform: translateY(-9px) rotate(17deg);
    scale: 1.3;
  }
  9% {
    transform: translateY(-9px) rotate(-17deg);
    scale: 1.3;
  }
  12% {
    transform: translateY(-9px) rotate(17deg);
    scale: 1.3;
  }
  15% {
    transform: translateY(-9px) rotate(-17deg);
    scale: 1.3;
  }
  21% {
    transform: translateY(0) rotate(0);
    scale: 1;
  }
}

